# gated-agent-protocol

./: .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  CONTRIBUTING.md  README.md  RELEASE_PLAN.md  SECURITY.md  mkdocs.yml  pyproject.toml
.archive/: auditor_v1.py  auditor_v2.py  checkpoint.py  policy.md  verification.md
.archive/ACL/: archived_acl_logic.md
.archive/archive/: SCHEMA.md  USE_CASE_SCHOOL.md  agent-steering.md  gap-specification.md  school_roadmap.md
.archive/demo_gap_project/: manifest.yaml
.archive/demo_lifecycle/: manifest.yaml
.archive/demos/: run_v2.py
.archive/docs/: DECISION.md  README.md  REALITY_CHECK.md  USE_CASE_SCHOOL.md  VISION.md
.archive/ensembles/: manifest.yaml  protocol.md
.archive/examples/: agent_simulation.py
.archive/instructional/: content.md
.archive/meta/: README.md
.archive/strategy/: README.md
.archive/ui-ux/: manifest.yaml  protocol.md
.github/workflows/: ci.yaml
demo/: demo.py
docs/: DECISIONS.md  LOGIC.md  README.md  SCHEMA.md  SCHEMA_PROJECT.md  SCHEMA_PROTOCOL.md  SCHEMA_SESSION.md  WHITE_PAPER.md  acl-specification.md  cli.md  execution-contract.md  index.md  integration_guide.md  postgres_spec.md  taxonomy.md
docs/Model Control Layer/: deterministic-checkpoints.md  model-selection-questions.md  requirements-model-control.md
docs/api/: cli.md
docs/refactor/: plan.md  (+2 more)
examples/: openrouter_bridge.py
reference_implementation/: gap-gptme  gap_system_prompt.md
tests/: conftest.py  test_factory_integration.py  test_manifest.py  test_path.py  test_sql_ledger.py  test_state.py  test_validator.py
(+159 files in other folders)
